--- a/mypagetemplate.html
+++ b/mypagetemplate.html
@@ -7,50 +7,6 @@
 <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 <head>
 
-
-<script>
-function myFunction() {
-  // Declare variables
-  var input, filter, table, tr, td, i, txtValue, indcol, mostrar;
-  input = document.getElementById("myInput");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("myTable");
-  tr = table.getElementsByTagName("tr");
-
-/*  // Loop through all table rows, and hide those who don't match the search query
-  for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[1];
-    if (td) {
-      txtValue = td.textContent || td.innerText;
-      if (txtValue.toUpperCase().indexOf(filter) > -1) {
-        tr[i].style.display = "";
-      } else {
-        tr[i].style.display = "none";
-      }
-    }
-  }  
-*/
-  for (i = 1; i < tr.length; i++) {
-	mostrar=0;
-    for(indcol = 0; indcol < 2; indcol++)
-	{
-		td = tr[i].getElementsByTagName("td")[indcol];
-		if (td) {
-		  txtValue = td.textContent || td.innerText;
-		  if (txtValue.toUpperCase().indexOf(filter) > -1) {
-			mostrar = 1;
-		  }
-		}
-	}
-	if (mostrar == 1){
-		tr[i].style.display = "";
-	} else{
-		tr[i].style.display = "none";
-	}
-  }
-}
-</script>
-
 <title>Distribuidora Shalom</title>
 </head>
 
@@ -64,17 +20,17 @@ function myFunction() {
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Buscar por Código o Descripción...">
 
 <table id="myTable">
-  <tr class="header">
+<thead class="header">
     <th style="width:50px;">Código</th>
     <th style="width:400px;">Descripción</th>
 	<th style="width:50px;">Unidad</th>
-	<th style="width:100px;">Neto</th>
-	<th style="width:100px;">IVA incluido</th>
-  </tr>
+	<th style="width:100px;text-align:right;">Neto</th>
+	<th style="width:100px;text-align:right;">IVA incluido</th>
+</thead>
+<tbody>
 %TABLA%
+</tbody>
 </table>
-
-
-
+<script src="js/filter-table.js"></script>
 </body>
 </html>
